Proyecto2-compi2/src/main/java/Backend/antlr/YParser.java
// Generated from Y.g4 by ANTLR 4.13.1
package Backend.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class YParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_SEC_ESTRUCTURAS=1, KW_SEC_FUNCIONES=2, KW_ESTRUCTURA=3, KW_DEFINIR=4, 
		KW_ENTERO=5, KW_FLOTANTE=6, KW_CADENA=7, KW_CARACTER=8, KW_BOOL=9, KW_VERDADERO=10, 
		KW_FALSO=11, KW_SI=12, KW_ENTONCES=13, KW_SINO=14, KW_CONTRARIO=15, KW_ELEGIR=16, 
		KW_CASO=17, KW_SIEMPRE=18, KW_PARA=19, KW_MIENTRAS=20, KW_HACER=21, KW_ROMPER=22, 
		KW_CONTINUAR=23, KW_RETORNAR=24, KW_IMPRIMIR=25, KW_LEER=26, FLECHA=27, 
		EQ=28, NEQ=29, LE=30, GE=31, LT=32, GT=33, AND=34, OR=35, NOT=36, INC=37, 
		DEC=38, PLUS=39, MINUS=40, STAR=41, SLASH=42, ASSIGN=43, COLON=44, SEMI=45, 
		COMMA=46, DOT=47, LPAREN=48, RPAREN=49, LBRACE=50, RBRACE=51, LBRACKET=52, 
		RBRACKET=53, DECIMAL_LIT=54, ENTERO_LIT=55, CADENA_LIT=56, CARACTER_LIT=57, 
		ID=58, NEWLINE=59, WS=60, LINE_COMMENT=61, BLOCK_COMMENT=62, INDENT=63, 
		DEDENT=64;
	public static final int
		RULE_programa = 0, RULE_seccionEstructuras = 1, RULE_declaracionEstructura = 2, 
		RULE_bloqueEstructura = 3, RULE_campoEstructura = 4, RULE_seccionFunciones = 5, 
		RULE_definicionFuncion = 6, RULE_listaParametrosY = 7, RULE_parametroY = 8, 
		RULE_bloque = 9, RULE_instruccion = 10, RULE_declaracionEstructuraLocal = 11, 
		RULE_declaracionVariableY = 12, RULE_inicializadorY = 13, RULE_literalArregloOEstructura = 14, 
		RULE_asignacionY = 15, RULE_destinoY = 16, RULE_accesoPostfijoY = 17, 
		RULE_instruccionIncrementoDecrementoY = 18, RULE_instruccionSiY = 19, 
		RULE_condicionY = 20, RULE_ramaSinoY = 21, RULE_ramaContrarioY = 22, RULE_instruccionElegirY = 23, 
		RULE_bloqueElegir = 24, RULE_casoElegir = 25, RULE_siempreElegir = 26, 
		RULE_instruccionParaY = 27, RULE_declaracionParaY = 28, RULE_actualizacionParaY = 29, 
		RULE_instruccionMientrasY = 30, RULE_instruccionHacerMientrasY = 31, RULE_instruccionRomper = 32, 
		RULE_instruccionContinuar = 33, RULE_instruccionRetornar = 34, RULE_instruccionImprimirY = 35, 
		RULE_instruccionLeerY = 36, RULE_instruccionLlamadaMetodoY = 37, RULE_llamadaMetodoY = 38, 
		RULE_listaArgumentosY = 39, RULE_finSentencia = 40, RULE_expresion = 41, 
		RULE_tipoY = 42, RULE_tipoBasico = 43, RULE_literalY = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "seccionEstructuras", "declaracionEstructura", "bloqueEstructura", 
			"campoEstructura", "seccionFunciones", "definicionFuncion", "listaParametrosY", 
			"parametroY", "bloque", "instruccion", "declaracionEstructuraLocal", 
			"declaracionVariableY", "inicializadorY", "literalArregloOEstructura", 
			"asignacionY", "destinoY", "accesoPostfijoY", "instruccionIncrementoDecrementoY", 
			"instruccionSiY", "condicionY", "ramaSinoY", "ramaContrarioY", "instruccionElegirY", 
			"bloqueElegir", "casoElegir", "siempreElegir", "instruccionParaY", "declaracionParaY", 
			"actualizacionParaY", "instruccionMientrasY", "instruccionHacerMientrasY", 
			"instruccionRomper", "instruccionContinuar", "instruccionRetornar", "instruccionImprimirY", 
			"instruccionLeerY", "instruccionLlamadaMetodoY", "llamadaMetodoY", "listaArgumentosY", 
			"finSentencia", "expresion", "tipoY", "tipoBasico", "literalY"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'%estructuras'", "'%funciones'", "'estructura'", "'definir'", 
			"'entero'", "'flotante'", "'cadena'", "'caracter'", "'bool'", "'verdadero'", 
			"'falso'", "'si'", "'entonces'", "'sino'", "'contrario'", "'elegir'", 
			"'caso'", "'siempre'", "'para'", "'mientras'", "'hacer'", "'romper'", 
			"'continuar'", "'retornar'", "'imprimir'", "'leer'", "'->'", "'=='", 
			"'!='", "'<='", "'>='", "'<'", "'>'", "'&&'", "'||'", "'!'", "'++'", 
			"'--'", "'+'", "'-'", "'*'", "'/'", "'='", "':'", "';'", "','", "'.'", 
			"'('", "')'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_SEC_ESTRUCTURAS", "KW_SEC_FUNCIONES", "KW_ESTRUCTURA", "KW_DEFINIR", 
			"KW_ENTERO", "KW_FLOTANTE", "KW_CADENA", "KW_CARACTER", "KW_BOOL", "KW_VERDADERO", 
			"KW_FALSO", "KW_SI", "KW_ENTONCES", "KW_SINO", "KW_CONTRARIO", "KW_ELEGIR", 
			"KW_CASO", "KW_SIEMPRE", "KW_PARA", "KW_MIENTRAS", "KW_HACER", "KW_ROMPER", 
			"KW_CONTINUAR", "KW_RETORNAR", "KW_IMPRIMIR", "KW_LEER", "FLECHA", "EQ", 
			"NEQ", "LE", "GE", "LT", "GT", "AND", "OR", "NOT", "INC", "DEC", "PLUS", 
			"MINUS", "STAR", "SLASH", "ASSIGN", "COLON", "SEMI", "COMMA", "DOT", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "DECIMAL_LIT", 
			"ENTERO_LIT", "CADENA_LIT", "CARACTER_LIT", "ID", "NEWLINE", "WS", "LINE_COMMENT", 
			"BLOCK_COMMENT", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Y.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public SeccionFuncionesContext seccionFunciones() {
			return getRuleContext(SeccionFuncionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(YParser.EOF, 0); }
		public SeccionEstructurasContext seccionEstructuras() {
			return getRuleContext(SeccionEstructurasContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(YParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YParser.NEWLINE, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(YParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(YParser.SEMI, i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(90);
					_la = _input.LA(1);
					if ( !(_la==SEMI || _la==NEWLINE) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_SEC_ESTRUCTURAS) {
				{
				setState(96);
				seccionEstructuras();
				}
			}

			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI || _la==NEWLINE) {
				{
				{
				setState(99);
				_la = _input.LA(1);
				if ( !(_la==SEMI || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			seccionFunciones();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI || _la==NEWLINE) {
				{
				{
				setState(106);
				_la = _input.LA(1);
				if ( !(_la==SEMI || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionEstructurasContext extends ParserRuleContext {
		public TerminalNode KW_SEC_ESTRUCTURAS() { return getToken(YParser.KW_SEC_ESTRUCTURAS, 0); }
		public FinSentenciaContext finSentencia() {
			return getRuleContext(FinSentenciaContext.class,0);
		}
		public List<DeclaracionEstructuraContext> declaracionEstructura() {
			return getRuleContexts(DeclaracionEstructuraContext.class);
		}
		public DeclaracionEstructuraContext declaracionEstructura(int i) {
			return getRuleContext(DeclaracionEstructuraContext.class,i);
		}
		public SeccionEstructurasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionEstructuras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterSeccionEstructuras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitSeccionEstructuras(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitSeccionEstructuras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionEstructurasContext seccionEstructuras() throws RecognitionException {
		SeccionEstructurasContext _localctx = new SeccionEstructurasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_seccionEstructuras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(KW_SEC_ESTRUCTURAS);
			setState(115);
			finSentencia();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_ESTRUCTURA) {
				{
				{
				setState(116);
				declaracionEstructura();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionEstructuraContext extends ParserRuleContext {
		public TerminalNode KW_ESTRUCTURA() { return getToken(YParser.KW_ESTRUCTURA, 0); }
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public TerminalNode COLON() { return getToken(YParser.COLON, 0); }
		public FinSentenciaContext finSentencia() {
			return getRuleContext(FinSentenciaContext.class,0);
		}
		public BloqueEstructuraContext bloqueEstructura() {
			return getRuleContext(BloqueEstructuraContext.class,0);
		}
		public DeclaracionEstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionEstructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterDeclaracionEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitDeclaracionEstructura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitDeclaracionEstructura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionEstructuraContext declaracionEstructura() throws RecognitionException {
		DeclaracionEstructuraContext _localctx = new DeclaracionEstructuraContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracionEstructura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(KW_ESTRUCTURA);
			setState(123);
			match(ID);
			setState(124);
			match(COLON);
			setState(125);
			finSentencia();
			setState(126);
			bloqueEstructura();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueEstructuraContext extends ParserRuleContext {
		public TerminalNode INDENT() { return getToken(YParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YParser.DEDENT, 0); }
		public List<CampoEstructuraContext> campoEstructura() {
			return getRuleContexts(CampoEstructuraContext.class);
		}
		public CampoEstructuraContext campoEstructura(int i) {
			return getRuleContext(CampoEstructuraContext.class,i);
		}
		public TerminalNode LBRACE() { return getToken(YParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(YParser.RBRACE, 0); }
		public List<FinSentenciaContext> finSentencia() {
			return getRuleContexts(FinSentenciaContext.class);
		}
		public FinSentenciaContext finSentencia(int i) {
			return getRuleContext(FinSentenciaContext.class,i);
		}
		public BloqueEstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloqueEstructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterBloqueEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitBloqueEstructura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitBloqueEstructura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueEstructuraContext bloqueEstructura() throws RecognitionException {
		BloqueEstructuraContext _localctx = new BloqueEstructuraContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloqueEstructura);
		int _la;
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(INDENT);
				setState(130); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(129);
					campoEstructura();
					}
					}
					setState(132); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376151712736L) != 0) );
				setState(134);
				match(DEDENT);
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(LBRACE);
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI || _la==NEWLINE) {
					{
					setState(137);
					finSentencia();
					}
				}

				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376151712736L) != 0)) {
					{
					{
					setState(140);
					campoEstructura();
					}
					}
					setState(145);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(146);
				match(RBRACE);
				setState(148);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(147);
					finSentencia();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CampoEstructuraContext extends ParserRuleContext {
		public TipoYContext tipoY() {
			return getRuleContext(TipoYContext.class,0);
		}
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public FinSentenciaContext finSentencia() {
			return getRuleContext(FinSentenciaContext.class,0);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(YParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(YParser.LBRACKET, i);
		}
		public List<ExpresionContext> expresion() {
			return getRuleContexts(ExpresionContext.class);
		}
		public ExpresionContext expresion(int i) {
			return getRuleContext(ExpresionContext.class,i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(YParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(YParser.RBRACKET, i);
		}
		public CampoEstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campoEstructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterCampoEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitCampoEstructura(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitCampoEstructura(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CampoEstructuraContext campoEstructura() throws RecognitionException {
		CampoEstructuraContext _localctx = new CampoEstructuraContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_campoEstructura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			tipoY();
			setState(153);
			match(ID);
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACKET) {
				{
				{
				setState(154);
				match(LBRACKET);
				setState(155);
				expresion(0);
				setState(156);
				match(RBRACKET);
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(163);
			finSentencia();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionFuncionesContext extends ParserRuleContext {
		public TerminalNode KW_SEC_FUNCIONES() { return getToken(YParser.KW_SEC_FUNCIONES, 0); }
		public FinSentenciaContext finSentencia() {
			return getRuleContext(FinSentenciaContext.class,0);
		}
		public List<DefinicionFuncionContext> definicionFuncion() {
			return getRuleContexts(DefinicionFuncionContext.class);
		}
		public DefinicionFuncionContext definicionFuncion(int i) {
			return getRuleContext(DefinicionFuncionContext.class,i);
		}
		public SeccionFuncionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionFunciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).enterSeccionFunciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YListener ) ((YListener)listener).exitSeccionFunciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YVisitor ) return ((YVisitor<? extends T>)visitor).visitSeccionFunciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeccionFuncionesContext seccionFunciones() throws RecognitionException {
		SeccionFuncionesContext _localctx = new SeccionFuncionesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_seccionFunciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(KW_SEC_FUNCIONES);
			setState(166);
			finSentencia();
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_DEFINIR) {
				{
				{
				setState(167);
				definicionFuncion();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
